fixed something in popul;re opskrifer

--- a/css/style.css
+++ b/css/style.css
@@ -219,8 +219,6 @@ footer{
     flex-direction: column;
     min-width: 30%;
     max-width: 30%;
-    min-height: 480px;
-    max-height: 500px;
     text-align: center;
     border-radius: 25px;
 }
@@ -248,9 +246,10 @@ footer{
 
 .se-vejledning{
     background-color: #f00b0b;
-    width: 100px;
+    width: 130px;
     height: 40px;
     border-radius: 10px;
+    margin-bottom: 5%;
     color: white;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
